allow reflective access to sun.util.locale